kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trendstore-deployment
  labels:
    app: trendstore
spec:
  replicas: 2 # Runs 2 copies for high availability
  selector:
    matchLabels:
      app: trendstore
  template:
    metadata:
      labels:
        app: trendstore
    spec:
      containers:
      - name: trendstore-container
        image: bibekdec2022/trend-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
        # Futuristic Health Checks
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
