kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trendstore-service
spec:
  selector:
    app: trendstore
  ports:
    - protocol: TCP
      port: 80        # Port on the LoadBalancer
      targetPort: 80  # Port on the container
  type: LoadBalancer
